syntax = "proto3";

package store;

option go_package = "github.com/STOVE-Milk/steam-clone/store/proto;store";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Store {
    rpc GetCategories(google.protobuf.Empty) returns (CategoryListRequest) {
        option (google.api.http) = {
            get: "/store/categories"
        };
    }
}


message GameRequest{
    int32 game_id = 1;
}

message GameResponse {
    string name = 1;
    string description_snippet = 2;
    map<string, int32> price = 3;
    int32 sale = 4;
    ContentPathRequest image = 5;
    ContentPathRequest video = 6;
    repeated string categoryList = 7;
}

message ContentPathRequest{
    string main = 1;
    repeated string sub = 2;
}

message CategoryListRequest{
    repeated string categoryList = 1;
}